mirco refactoring (#55)
